Changed z-index of fixed header

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-/* Flex is set to ensure that the main-element stretches to the whole page. This way border-bottom doesn't display in the middel of the page, when there is not a lot of content */
+/* Main element stretches. This way border-bottom doesn't display in the middle of the page, if main does not hold a lot of content */
 main {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -268,7 +268,7 @@ blockquote {
 
 /* Frontpage styling overrides */
 #frontpage {
-  padding: 0 20px 40px 20px;
+  padding: 0 20px 20px 20px;
   background: url('assets/frontpage-bg.jpg');
   background-size: cover;
   background-position: top center;
@@ -339,13 +339,14 @@ blockquote {
     margin-top: 10px;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 520px) {
   header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 0 20px;
+    z-index: 10;
   }
   /* Extra body padding since the menu is now displaying with a fixed position */
   body {
